unpackaged/main/default/objects/OutboundComms__mdt/OutboundComms__mdt.object-meta.xml
<CustomObject>
    <label>OutboundComm</label>
    <pluralLabel>OutboundComms</pluralLabel>
</CustomObject>