unpackaged/main/default/objects/OutboundComms__mdt/fields/Case_Type_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Name_s__c</fullName>
    <inlineHelpText>Separate Case Type Name(s) with ;</inlineHelpText>
    <label>Case Type Name(s)</label>
    <type>TextArea</type>
</CustomField>