unpackaged/main/default/objects/OutboundComms__mdt/fields/Email_Body_TEST__c.field-meta.xml
<CustomField>
    <fullName>Email_Body_TEST__c</fullName>
    <label>Email Body TEST</label>
    <type>TextArea</type>
</CustomField>