unpackaged/main/default/objects/OutboundComms__mdt/fields/Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_ID__c</fullName>
    <label>Email Template ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>