unpackaged/main/default/objects/OutboundComms__mdt/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>