unpackaged/main/default/objects/OutboundComms__mdt/listViews/All_with_all_fields.listView-meta.xml
<ListView>
    <fullName>All_with_all_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Case_Type_Name_s__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>Email_Body_TEST__c</columns>
    <columns>Email_Template_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with all fields</label>
</ListView>